--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -93,14 +93,14 @@ body {
 .sidebar hr {
   width: 100%;
   border: none;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-top: 1px solid rgba(255, 255, 255, 0.289);
   margin: 8px 0;
 }
 
 /* ✅ Sidebar Links */
 .sidebar a {
   display: block;
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 11.5px;
   padding: 6px;
   margin-bottom: 6px;
